--- a/css/main.css
+++ b/css/main.css
@@ -530,15 +530,7 @@ input[type=radio]:checked ~ label{
   opacity: 1;
 }
 
-.overlay {
-  position: fixed;
-  width: 100%;
-  height: 100%;
+.modal {
   overflow: hidden;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0,0,0,0.5);
-  z-index: 9999999;
+  background: rgba(0,0,0,0.5);
 }
